--- a/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_invitation_ui.xml
@@ -22,8 +22,17 @@
             app:contentScrim="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Light"
             app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp"
-            android:background="@drawable/map_sample">
+            app:expandedTitleMarginEnd="64dp">
+            //android:background="@drawable/map_sample">
+
+            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:context="com.IrisBICS.lonelysg.Activities.IndividualInvitationUI" />
+
 
             <ImageButton
                 android:id="@+id/reportInvitation"
