--- a/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
@@ -65,6 +65,18 @@
             android:gravity="left"
             android:hint="Enter the event description" />
 
+        <fragment
+            android:id="@+id/autocomplete_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="15dp"
+            android:hint="Select Location"
+            android:textAlignment="center"
+            />
+
         <Button
             android:id="@+id/datePick"
             android:layout_width="match_parent"
