--- a/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_create_invitation_ui.xml
@@ -6,149 +6,162 @@
     android:layout_height="match_parent"
     tools:context=".Activities.CreateInvitationUI">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/splash_screen"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        android:scrollbarSize="3dp"
+        android:scrollbarStyle="outsideOverlay"
+        android:scrollbars="vertical"
+        android:scrollingCache="true"
+        android:smoothScrollbar="true">
 
-        <TextView
-            android:id="@+id/newInvitation"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/splash_screen"
             android:gravity="center"
-            android:text="NEW INVITATION"
-            android:textSize="36sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"/>
+            android:orientation="vertical"
+            android:padding="10dp">
 
-        <View
-            android:layout_width="350dp"
-            android:layout_height="1dp"
-            android:layout_margin="5dp"
-            android:background="@color/white"/>
+            <TextView
+                android:id="@+id/newInvitation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="NEW INVITATION"
+                android:textSize="36sp"
+                android:textColor="@color/white"
+                android:textStyle="bold"/>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:src="@drawable/user_sample"
-            android:id="@+id/newInvPic"
-            android:layout_gravity="center"
-            android:layout_marginTop="15dp"/>
+            <View
+                android:layout_width="350dp"
+                android:layout_height="1dp"
+                android:layout_margin="5dp"
+                android:background="@color/white"/>
 
-        <EditText
-            android:id="@+id/enterTitle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:gravity="left"
-            android:hint="Enter the event title" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_width="110dp"
+                android:layout_height="110dp"
+                android:src="@drawable/user_sample"
+                android:id="@+id/newInvPic"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"/>
 
-        <Spinner
-            android:id="@+id/categoryDropBox"
-            android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@drawable/rectangleborder"
-            android:gravity="center" />
+            <EditText
+                android:id="@+id/enterTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="left"
+                android:hint="Enter the event title" />
 
-        <EditText
-            android:id="@+id/enterDesc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:gravity="left"
-            android:hint="Enter the event description" />
+            <Spinner
+                android:id="@+id/categoryDropBox"
+                android:layout_width="match_parent"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:background="@drawable/rectangleborder"
+                android:gravity="center" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:text="Enter location address"
-            android:textSize="16dp"
-            android:textColor="@color/black"/>
+            <EditText
+                android:id="@+id/enterDesc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:gravity="left"
+                android:hint="Enter the event description" />
 
-        <fragment
-            android:id="@+id/autocomplete_fragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="15dp"
-            android:hint="Select Location"
-            android:textAlignment="center"
-            />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:text="Enter location address"
+                android:textSize="16dp"
+                android:textColor="@color/black"/>
 
-        <Button
-            android:id="@+id/datePick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:text="Select Date"
-            android:textAlignment="center" />
+            <fragment
+                android:id="@+id/autocomplete_fragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:hint="Select Location"
+                android:textAlignment="center"
+                />
 
-        <Button
-            android:id="@+id/startTimePick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="15dp"
-            android:text="Select Start Time"
-            android:textAlignment="center" />
+            <Button
+                android:id="@+id/datePick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="15dp"
+                android:text="Select Date"
+                android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/endTimePick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="15dp"
-            android:text="Select End Time"
-            android:textAlignment="center" />
+            <Button
+                android:id="@+id/startTimePick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
+                android:text="Select Start Time"
+                android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/confirmButton"
-            android:layout_width="250dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/colorPrimary"
-            android:text="CONFIRM"
-            android:textAlignment="center"
-            android:textColor="@color/backgroundcolor" />
+            <Button
+                android:id="@+id/endTimePick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="15dp"
+                android:text="Select End Time"
+                android:textAlignment="center" />
 
-        <Button
-            android:id="@+id/cancelButton"
-            android:layout_width="250dp"
-            android:layout_height="35dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="15dp"
-            android:background="@color/colorPrimary"
-            android:text="CANCEL"
-            android:textAlignment="center"
-            android:textColor="@color/backgroundcolor" />
+            <Button
+                android:id="@+id/confirmButton"
+                android:layout_width="250dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/colorPrimary"
+                android:text="CONFIRM"
+                android:textAlignment="center"
+                android:textColor="@color/backgroundcolor" />
 
-    </LinearLayout>
+            <Button
+                android:id="@+id/cancelButton"
+                android:layout_width="250dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="15dp"
+                android:background="@color/colorPrimary"
+                android:text="CANCEL"
+                android:textAlignment="center"
+                android:textColor="@color/backgroundcolor" />
+
+        </LinearLayout>
+
+    </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
