--- a/Lonelysg/app/src/main/res/layout/activity_manage_requests_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_manage_requests_ui.xml
@@ -101,7 +101,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
-                    android:id="@+id/receivedRequestsTitle"
+                    android:id="@+id/receivedRequests"
                     android:foreground="?android:attr/selectableItemBackground"
                     android:clickable="true"
                     android:layout_width="160dp"
