--- a/Lonelysg/app/src/main/res/layout/fragment_account.xml
+++ b/Lonelysg/app/src/main/res/layout/fragment_account.xml
@@ -233,7 +233,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="40dp"
                     android:layout_marginBottom="20dp"
@@ -244,8 +244,6 @@
                         android:id="@+id/editProfileButton"
                         android:layout_width="wrap_content"
                         android:layout_height="36dp"
-                        android:layout_marginLeft="70dp"
-                        android:layout_marginRight="70dp"
                         android:layout_marginTop="40dp"
                         android:layout_gravity="center"
                         android:background="@drawable/borders3"
