--- a/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_individual_chat_ui.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="721dp"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <LinearLayout
@@ -57,58 +57,65 @@
                 android:src="@drawable/refresh" />
         </LinearLayout>
 
-        <LinearLayout
+
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/chatView"
                 android:layout_width="match_parent"
-                android:layout_height="550dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="bottom"
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="20dp"
+                android:layout_above="@+id/ll"
                 android:scrollbarSize="3dp"
                 android:scrollbarStyle="outsideOverlay"
                 android:scrollbars="vertical"
                 android:scrollingCache="true"
                 android:smoothScrollbar="true"
                 app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/typeMessage"
-                android:layout_width="300dp"
+            <LinearLayout
+                android:id="@+id/ll"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="15dp"
-                android:ems="10"
-                android:focusable="true"
-                android:hint="Type message here"
-                android:inputType="textPersonName"
-                tools:layout_editor_absoluteX="26dp"
-                tools:layout_editor_absoluteY="242dp" />
+                android:layout_alignParentBottom="true"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/sendButton"
-                android:layout_width="65dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="15dp"
-                android:text="Send"/>
-        </LinearLayout>
+                <EditText
+                    android:id="@+id/typeMessage"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="15dp"
+                    android:ems="10"
+                    android:focusable="true"
+                    android:hint="Type message here"
+                    android:inputType="textPersonName"
+                    tools:layout_editor_absoluteX="26dp"
+                    tools:layout_editor_absoluteY="242dp" />
+
+                <Button
+                    android:id="@+id/sendButton"
+                    android:layout_width="65dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="15dp"
+                    android:text="Send"/>
+            </LinearLayout>
+        </RelativeLayout>
+
+
+
     </LinearLayout>
 
 </LinearLayout>
