--- a/Lonelysg/app/src/main/res/layout/activity_edit_invitation_ui.xml
+++ b/Lonelysg/app/src/main/res/layout/activity_edit_invitation_ui.xml
@@ -4,165 +4,111 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash_screen"
     tools:context=".Activities.ActivityEditInvitation">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#fcfcfc"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:scrollbarSize="3dp"
-        android:scrollbarStyle="outsideOverlay"
-        android:scrollbars="vertical"
-        android:scrollingCache="true"
-        android:smoothScrollbar="true">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/editInvitation"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:padding="10dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="wrap_content"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:text="Edit Invitation"
+            android:textSize="36sp" />
 
-            <TextView
-                android:id="@+id/editInvitation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
-                android:text="EDIT INVITATION"
-                android:textSize="36sp"
-                android:textColor="@color/white"
-                android:textStyle="bold"/>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:src="@drawable/user_sample"
+            android:id="@+id/editInvitationPic"
+            android:layout_gravity="center"
+            android:layout_marginTop="25dp"/>
 
-            <View
-                android:layout_width="350dp"
-                android:layout_height="1dp"
-                android:layout_margin="5dp"
-                android:background="@color/white"/>
+        <EditText
+            android:id="@+id/editTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:gravity="left"
+            android:hint="Enter the event title" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="110dp"
-                android:layout_height="110dp"
-                android:src="@drawable/user_sample"
-                android:id="@+id/editInvitationPic"
-                android:layout_gravity="center"
-                android:layout_marginTop="25dp"/>
+        <Spinner
+            android:id="@+id/editCategoryDropBox"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/rectangleborder"
+            android:gravity="center" />
 
-            <EditText
-                android:id="@+id/editTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:gravity="left"
-                android:hint="Enter the event title" />
+        <EditText
+            android:id="@+id/editDesc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:gravity="left"
+            android:hint="Enter the event description" />
 
-            <Spinner
-                android:id="@+id/editCategoryDropBox"
-                android:layout_width="match_parent"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@drawable/rectangleborder"
-                android:gravity="center" />
+        <Button
+            android:id="@+id/newDatePick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:text="Select Date"
+            android:textAlignment="center" />
 
-            <EditText
-                android:id="@+id/editDesc"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:gravity="left"
-                android:hint="Enter the event description" />
+        <Button
+            android:id="@+id/newTimePick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:text="Select Time"
+            android:textAlignment="center" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:text="Enter location address"
-                android:textSize="16dp"
-                android:textColor="@color/black"/>
+        <Button
+            android:id="@+id/confirmButton"
+            android:layout_width="250dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="15dp"
+            android:background="@color/colorPrimary"
+            android:text="CONFIRM"
+            android:textAlignment="center"
+            android:textColor="@color/backgroundcolor" />
 
-            <fragment
-                android:id="@+id/autocomplete_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginRight="15dp"
-                android:hint="Select Location"
-                android:textAlignment="center"
-                />
+        <Button
+            android:id="@+id/cancelEditButton"
+            android:layout_width="250dp"
+            android:layout_height="35dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@color/colorPrimary"
+            android:text="CANCEL"
+            android:textAlignment="center"
+            android:textColor="@color/backgroundcolor" />
 
-            <Button
-                android:id="@+id/newDatePick"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:text="Select Date"
-                android:textAlignment="center" />
-
-            <Button
-                android:id="@+id/newStartTimePick"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:text="Select Start Time"
-                android:textAlignment="center" />
-
-            <Button
-                android:id="@+id/newEndTimePick"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginRight="15dp"
-                android:text="Select End Time"
-                android:textAlignment="center" />
-
-            <Button
-                android:id="@+id/confirmButton"
-                android:layout_width="250dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="50dp"
-                android:layout_marginRight="15dp"
-                android:background="@color/colorPrimary"
-                android:text="CONFIRM"
-                android:textAlignment="center"
-                android:textColor="@color/backgroundcolor" />
-
-            <Button
-                android:id="@+id/cancelEditButton"
-                android:layout_width="250dp"
-                android:layout_height="35dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="15dp"
-                android:background="@color/colorPrimary"
-                android:text="CANCEL"
-                android:textAlignment="center"
-                android:textColor="@color/backgroundcolor" />
-
-        </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
